--- a/Your Vocabulary/MVC/Views/Base.lproj/Settings.storyboard
+++ b/Your Vocabulary/MVC/Views/Base.lproj/Settings.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NaR-tw-MJj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NaR-tw-MJj">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -247,17 +247,17 @@
                                     <segue destination="lZ9-XN-1Lv" kind="unwind" unwindAction="finishRestoringBackupWithSegue:" id="sQa-oT-7Vn"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="v4b-8q-bwk">
-                                <rect key="frame" x="10" y="538.66666666666663" width="355" height="177.33333333333337"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="v4b-8q-bwk">
+                                <rect key="frame" x="10" y="479.33333333333331" width="355" height="236.66666666666669"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SELECT DAYS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZp-qM-Jts">
-                                        <rect key="frame" x="131" y="0.0" width="93.333333333333314" height="10.666666666666666"/>
+                                        <rect key="frame" x="131" y="0.0" width="93.333333333333314" height="12.666666666666666"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                         <color key="textColor" red="0.16862745100000001" green="0.27058823529999998" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="e7E-K8-i54">
-                                        <rect key="frame" x="31" y="18.666666666666746" width="293" height="35.333333333333343"/>
+                                        <rect key="frame" x="31" y="22.666666666666689" width="293" height="35.333333333333343"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="moY-ql-RcM" customClass="DayOfWeekButton" customModule="Your_Vocabulary" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="35" height="35.333333333333336"/>
@@ -273,7 +273,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zvh-Wn-DJz" customClass="DayOfWeekButton" customModule="Your_Vocabulary" customModuleProvider="target">
-                                                <rect key="frame" x="43" y="0.0" width="35" height="35"/>
+                                                <rect key="frame" x="43" y="0.33333333333331439" width="35" height="35"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="Zvh-Wn-DJz" secondAttribute="height" multiplier="1:1" id="T2s-JD-7IE"/>
                                                 </constraints>
@@ -284,7 +284,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zNi-Hc-hZf" customClass="DayOfWeekButton" customModule="Your_Vocabulary" customModuleProvider="target">
-                                                <rect key="frame" x="86" y="0.33333333333325754" width="35" height="34.333333333333336"/>
+                                                <rect key="frame" x="86" y="0.66666666666668561" width="35" height="34.333333333333336"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="zNi-Hc-hZf" secondAttribute="height" multiplier="1:1" id="rRY-PC-axX"/>
                                                 </constraints>
@@ -295,7 +295,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HLd-au-NuB" customClass="DayOfWeekButton" customModule="Your_Vocabulary" customModuleProvider="target">
-                                                <rect key="frame" x="129" y="0.0" width="35" height="35"/>
+                                                <rect key="frame" x="129" y="0.33333333333331439" width="35" height="35"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="HLd-au-NuB" secondAttribute="height" multiplier="1:1" id="5Fa-Sh-Fr5"/>
                                                 </constraints>
@@ -306,7 +306,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Px9-EG-AQH" customClass="DayOfWeekButton" customModule="Your_Vocabulary" customModuleProvider="target">
-                                                <rect key="frame" x="172" y="0.0" width="35" height="35"/>
+                                                <rect key="frame" x="172" y="0.33333333333331439" width="35" height="35"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="Px9-EG-AQH" secondAttribute="height" multiplier="1:1" id="IcB-f1-sSN"/>
                                                 </constraints>
@@ -317,7 +317,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZSL-KM-VzI" customClass="DayOfWeekButton" customModule="Your_Vocabulary" customModuleProvider="target">
-                                                <rect key="frame" x="215" y="0.0" width="35" height="35"/>
+                                                <rect key="frame" x="215" y="0.33333333333331439" width="35" height="35"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="ZSL-KM-VzI" secondAttribute="height" multiplier="1:1" id="NZ4-uw-3HI"/>
                                                 </constraints>
@@ -328,7 +328,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yyx-0Y-0dr" customClass="DayOfWeekButton" customModule="Your_Vocabulary" customModuleProvider="target">
-                                                <rect key="frame" x="258" y="0.0" width="35" height="35"/>
+                                                <rect key="frame" x="258" y="0.33333333333331439" width="35" height="35"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="Yyx-0Y-0dr" secondAttribute="height" multiplier="1:1" id="eDV-lT-CfM"/>
                                                 </constraints>
@@ -341,20 +341,20 @@
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SELECT TIME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qJ7-Ez-fIr">
-                                        <rect key="frame" x="132.33333333333334" y="62.000000000000007" width="90.333333333333343" height="10.333333333333336"/>
+                                        <rect key="frame" x="132.33333333333334" y="68.000000000000057" width="90.333333333333343" height="13"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                         <color key="textColor" red="0.16862745100000001" green="0.27058823529999998" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="2eY-zt-EXR">
-                                        <rect key="frame" x="17.666666666666657" y="80.333333333333371" width="320" height="97"/>
+                                        <rect key="frame" x="17.666666666666657" y="91.000000000000043" width="320" height="145.66666666666663"/>
                                         <date key="date" timeIntervalSinceReferenceDate="548827139.97259295">
                                             <!--2018-05-24 03:58:59 +0000-->
                                         </date>
                                     </datePicker>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="v4b-8q-bwk" secondAttribute="height" multiplier="2:1" id="uRp-ZB-say"/>
+                                    <constraint firstAttribute="width" secondItem="v4b-8q-bwk" secondAttribute="height" multiplier="1.5:1" id="uRp-ZB-say"/>
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pGW-Fm-aM8">
@@ -365,9 +365,8 @@
                                     <action selector="saveNotification:" destination="EXo-OI-8FD" eventType="touchUpInside" id="8o8-v2-2RA"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S95-3t-Icw">
-                                <rect key="frame" x="20" y="365.33333333333331" width="335" height="81.333333333333314"/>
-                                <string key="text">Base on statistic, the more you practice the better your knowledge will be. We suggest you train every day on 5-10 minutes, and you definitely will extend your vocabulary.</string>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="For expanding and improving your vocabulary, we suggest you train every day at least 5-10 minutes." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S95-3t-Icw">
+                                <rect key="frame" x="20" y="368.33333333333331" width="335" height="61"/>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
                                 <color key="textColor" red="0.16862745100000001" green="0.27058823529999998" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -376,11 +375,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="B6r-rq-aHT" secondAttribute="bottom" id="7gK-S8-mFh"/>
+                            <constraint firstItem="v4b-8q-bwk" firstAttribute="top" secondItem="S95-3t-Icw" secondAttribute="bottom" constant="50" id="8Fz-G9-nHI"/>
                             <constraint firstItem="v4b-8q-bwk" firstAttribute="leading" secondItem="63j-1E-2jd" secondAttribute="leading" constant="10" id="9Oh-CJ-Hwg"/>
                             <constraint firstAttribute="trailing" secondItem="S95-3t-Icw" secondAttribute="trailing" constant="20" id="NQL-9J-nxx"/>
                             <constraint firstItem="B6r-rq-aHT" firstAttribute="trailing" secondItem="jFM-gU-7Kj" secondAttribute="trailing" id="OeO-df-MjE"/>
-                            <constraint firstItem="S95-3t-Icw" firstAttribute="centerX" secondItem="B6r-rq-aHT" secondAttribute="centerX" id="Tah-Sv-mt8"/>
-                            <constraint firstItem="S95-3t-Icw" firstAttribute="centerY" secondItem="B6r-rq-aHT" secondAttribute="centerY" id="X08-Wy-XL5"/>
                             <constraint firstItem="B6r-rq-aHT" firstAttribute="top" secondItem="63j-1E-2jd" secondAttribute="top" id="XrJ-qg-zF9"/>
                             <constraint firstItem="B6r-rq-aHT" firstAttribute="leading" secondItem="jFM-gU-7Kj" secondAttribute="leading" id="cRx-o5-3uv"/>
                             <constraint firstItem="pGW-Fm-aM8" firstAttribute="centerX" secondItem="B6r-rq-aHT" secondAttribute="centerX" id="d4X-sy-f5m"/>
