--- a/Your Vocabulary/MVC/Views/Base.lproj/Settings.storyboard
+++ b/Your Vocabulary/MVC/Views/Base.lproj/Settings.storyboard
@@ -190,37 +190,6 @@
             </objects>
             <point key="canvasLocation" x="1158" y="810"/>
         </scene>
-        <!--Notifications Table View Controller-->
-        <scene sceneID="aOH-qZ-aXO">
-            <objects>
-                <tableViewController id="opH-bD-oVS" customClass="NotificationsTableViewController" customModule="Your_Vocabulary" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="GdH-7i-YnP">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="WCp-Vs-fOc">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WCp-Vs-fOc" id="2OP-Hu-tAg">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="opH-bD-oVS" id="RsA-ev-MBr"/>
-                            <outlet property="delegate" destination="opH-bD-oVS" id="wrm-1U-oAl"/>
-                        </connections>
-                    </tableView>
-                    <connections>
-                        <segue destination="EXo-OI-8FD" kind="show" identifier="createNotification" id="x3T-S3-amo"/>
-                    </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nMj-1I-7xu" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2975" y="810"/>
-        </scene>
         <!--Training Reminder View Controller-->
         <scene sceneID="eng-gE-F2f">
             <objects>
@@ -407,7 +376,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I0h-0t-YZi" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="lZ9-XN-1Lv" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1942" y="810"/>
+            <point key="canvasLocation" x="1942" y="971"/>
         </scene>
         <!--AppOnboarding-->
         <scene sceneID="WLK-We-vKz">
@@ -457,7 +426,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XKg-fP-ehn" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="YhO-IK-zzK" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1054" y="1554"/>
+            <point key="canvasLocation" x="1158" y="1787"/>
         </scene>
         <!--Language-->
         <scene sceneID="XAx-GN-Ed0">
@@ -470,7 +439,7 @@
                         <sections>
                             <tableViewSection id="TxL-td-lnB">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="L7y-4l-EzO" style="IBUITableViewCellStyleDefault" id="hCg-22-nMq">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EnglishLanguage" textLabel="L7y-4l-EzO" style="IBUITableViewCellStyleDefault" id="hCg-22-nMq">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hCg-22-nMq" id="GuJ-CR-ZWG">
@@ -489,7 +458,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="9PE-2t-PTt" style="IBUITableViewCellStyleDefault" id="udA-Sa-7bt">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RussianLanguage" textLabel="9PE-2t-PTt" style="IBUITableViewCellStyleDefault" id="udA-Sa-7bt">
                                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="udA-Sa-7bt" id="TzN-Mz-xBM">
@@ -556,7 +525,4 @@
         <image name="settings_tb" width="30" height="30"/>
         <image name="settings_tb_selected" width="30" height="30"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="GSI-Ew-Cik"/>
-    </inferredMetricsTieBreakers>
 </document>
